--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -107,3 +107,17 @@ input {
   font-weight: 300;
   font-style: normal;
 }
+
+@media (max-width: 480px) {
+  .test-block {
+    left: 25px;
+    top: 25px;
+    width: 100%;
+    height: 530px;
+  }
+
+  .testimonial-img {
+    object-fit: cover;
+    width: 900px;
+  }
+}
