--- a/styles.css
+++ b/styles.css
@@ -37,11 +37,13 @@
 .testimonial-title-1 {
   top: 25px;
   padding-left: 10px;
+  font-size: 2em;
 }
 
 .testimonial-title-2 {
   top: 65px;
   padding-left: 10px;
+  font-size: 2em;
 }
 
 .testimonies {
@@ -81,6 +83,40 @@
   font-style: italic;
 }
 
+@media (max-width: 640px) {
+  .test-block {
+    left: 25px;
+    top: 25px;
+    width: 100%;
+    height: 560px;
+  }
+
+  .testimonial-img {
+    object-fit: cover;
+    object-position: 0;
+    height: 620px;
+  }
+
+  .testimonial-title-1 {
+    padding-right: 35px;
+    font-size: 1.65em;
+  }
+
+  .testimonial-title-2 {
+    padding-right: 35px;
+    font-size: 1.65em;
+  }
+
+  .testimony-name {
+    font-size: 1em;
+  }
+
+  .testimony-text {
+    padding-right: 35px;
+    font-size: 0.85em;
+  }
+}
+
 /* Contact Us Section */
 .contact-us {
   background-color: rgb(101, 191, 251);
@@ -106,18 +142,4 @@ input {
   margin-top: 25px;
   font-weight: 300;
   font-style: normal;
-}
-
-@media (max-width: 640px) {
-  .test-block {
-    left: 25px;
-    top: 25px;
-    width: 100%;
-    height: 530px;
-  }
-
-  .testimonial-img {
-    object-fit: cover;
-    width: 900px;
-  }
 }
